# portal-ai-server

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  litellm-config.yaml  pyproject.toml
.github/workflows/: ci.yml
.serena/: project.yml
app/: main.py
app/api/: __init__.py  health.py
app/core/: config.py
app/providers/: llm.py  vector.py
docs/plans/: 2026-04-10-ai-server-design.md  26-04-10-ai-server-bootstrap-guide.md
docs/superpowers/plans/: 2026-04-10-phase-a-fastapi-skeleton.md
tests/: conftest.py  test_config.py  test_health.py
